--- a/minimal-blog-card-starter/styles.css
+++ b/minimal-blog-card-starter/styles.css
@@ -7,6 +7,7 @@
 body {
   height: 100vh;
   display: flex;
+  background-color: #FAFAF9;
   flex-direction: column;
   align-items: center;
   justify-content: center;
